[project]
name = "tutorial-spec-driven"
version = "0.1.0"
description = "Tutorial project for learning spec-driven development through agent-driven workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "huggingface-hub>=0.35.3",
    "matplotlib>=3.8",
    "numpy>=1.26,<2",
    "opencv-python>=4.9",
    "pillow>=10.2",
    "scikit-image>=0.22",
    "scipy>=1.11",
    "torch>=2.3,<2.4",
    "torchvision>=0.18,<0.19",
    "transformers>=4.38,<5",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
